homework/7.advanced-abstractions/prometheus-stateful-set.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus
spec:
  serviceName: prometheus 
  replicas: 1
  podManagementPolicy: Parallel
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      serviceAccountName: prometheus
      containers:
        - name: prometheus
          image: prom/prometheus:v2.19.2
          imagePullPolicy: IfNotPresent
          args:
            - --config.file=/etc/config/prometheus.yml
            - --storage.tsdb.path=/prometheus
            - --web.console.libraries=/etc/prometheus/console_libraries
            - --web.console.templates=/etc/prometheus/consoles
            - --web.enable-lifecycle
          ports:
            - containerPort: 9090
          resources:
            requests:
              cpu: 200m
              memory: 1000Mi
            limits:
              cpu: 200m
              memory: 1000Mi
          volumeMounts:
            - name: config-volumes
              mountPath: /etc/config
            - name: prometheus-data
              mountPath: /prometheus
              subPath: ""
      terminationGracePeriodSeconds: 300
      volumes:
        - name: config-volumes
          configMap:
            name: my-configmap
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: k8s-app
                operator: In
                values:
                - prometheus
            topologyKey: kubernetes.io/hostname
  volumeClaimTemplates:
  - metadata:
      name: prometheus-data
    spec:
      storageClassName: csi-ceph-hdd-gz1
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 5Gi
