homework/7.advanced-abstractions/service.yml
kind: Service
apiVersion: v1
metadata:
  name: prometheus
  labels:
    app: prometheus
spec:
  clusterIP: None
  ports:
  - port: 9090
    targetPort: 9090
  selector:
    app: prometheus
